2004-03-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c (NTSystemComman): Use
	MsgWaitForMultipleObjects() rather than WaitForSingleObject() in
	order to avoid possible deadlock when application code directly or
	indirectly creates windows.

2004-02-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/animate.c (XMagickCommand): URL should point to
	http://graphicsmagick.org/.
	* magick/display.c (XMagickCommand): URL should point to
	http://graphicsmagick.org/.
	* magick/image.c (DisplayImages): Changes to fix memory leaks in
	X11 commands had bugs which seriously broke DisplayImages.  Now
	DisplayImages works properly again.
	* magick/xwindow.c (XDestroyResourceInfo): New function to destroy
	XResourceInfo.
	* coders/x.c (WriteXImage): Implement based on DisplayImages().
	(RegisterXImage): Always register X coder, but with read/write
	support disabled if X11 not available.

2004-02-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (ImportImageCommand): Eliminate memory leaks.
	* magick/memory.c (LiberateMemory): Use MagickFreeMemory macro for
	implementation.
	(ReacquireMemory): Use MagickReallocMemory macro for
	implementation.
	(AcquireMemory): Use MagickAllocateMemory for implementation.

2004-02-26  Vladimir  <lvm@integrum.ru>

	* magick/memory.c (CloneMemory): Fixes to compile under Microsoft
	Visual C++ 6.0.

2004-02-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/animate.c (XAnimateImages): Memory leak reduction and
	better integration with gm command.
	* magick/display.c (XDisplayImage): Display was leaking memory
	like a sieve.  Now it doesn't.
	* magick/memory.c (CloneMemory): Computation for when it is safe
	to use memcpy() was incorrect.  Use memmove() rather than
	backwards-copy loop.
	* Makefile.am ($(DIST_ARCHIVE_SRPM)): Added rules to build a
	source RPM.
	* configure.ac: Search for 'buildrpm' or 'rpm' programs in order to