@@ -48,41 +48,41 @@
  -->
 <delegatemap>
 <delegate decode="autotrace" stealth="True" command='autotrace -output-format svg -output-file "%o" "%i"' />
-  <delegate decode="bmp" encode="launch" mode="encode" command='@GMDisplayDelegate@ "%i."' />
-  <delegate decode="bmp" encode="win" mode="encode" command='@GMDisplayDelegate@ "%i."' />
-  <delegate decode="browse" restrain="True" spawn="True" command='cmd /C start http://www.imagemagick.org/'  />
+  <delegate decode="bmp" encode="launch" mode="encode" command='"@GMDisplayDelegate@" "%i."' />
+  <delegate decode="bmp" encode="win" mode="encode" command='"@GMDisplayDelegate@" "%i."' />
+  <delegate decode="browse" restrain="True" spawn="True" command='cmd /C start "http://www.GraphicsMagick.org/"'  />
   <delegate decode="cgm" command='ralcgm -d ps "%i" "%o" %u
-    @GMDelegate@ convert -concatenate %o*.ps "%o"' />
+    "@GMDelegate@" convert -adjoin %o*.ps "%o"' />
   <delegate decode="compress" restrain="True" command='|uncompress -c "%i"' />
   <delegate decode="dcraw" command='dcraw -c -w -2 "%i" > "%o"' />
   <delegate decode="dot" command='dot -Tps "%i" -o "%o"' />
   <delegate decode="dvi" command='dvips -q -o "%o" "%i"' />
   <delegate decode="edit" restrain="True" command='notepad "%o"' />
-  <delegate decode="eps" encode="pdf" mode="bi" command='@PSDelegate@ -q -dBATCH -dMaxBitmap=300000000 -dNOPAUSE -sDEVICE=pdfwrite -sOutputFile=%o -- "%i" -c quit' />
-  <delegate decode="eps" encode="ps" mode="bi" command='@PSDelegate@ -q -dBATCH -dMaxBitmap=300000000 -dNOPAUSE -sDEVICE=pswrite -sOutputFile=%o -- "%i" -c quit' />
+  <delegate decode="eps" encode="pdf" mode="bi" command='"@PSDelegate@" -q -dBATCH -dMaxBitmap=300000000 -dNOPAUSE -sDEVICE=pdfwrite -sOutputFile=%o -- "%i" -c quit' />
+  <delegate decode="eps" encode="ps" mode="bi" command='"@PSDelegate@" -q -dBATCH -dMaxBitmap=300000000 -dNOPAUSE -sDEVICE=pswrite -sOutputFile=%o -- "%i" -c quit' />
   <delegate decode="fig" command='/usr/X11R6/bin/fig2dev -L ps "%i" "%o"' />
   <delegate decode="gplt" command='/bin/echo "set size 1.25,0.62
     set terminal postscript portrait color solid; set output "%o"; load "%i"" > %u;gnuplot %u' />
-  <delegate decode="gs-color" restrain="True" command='@PSDelegate@ -q -dBATCH -dMaxBitmap=300000000 -dNOPAUSE -sDEVICE=pnmraw -dTextAlphaBits=%u -dGraphicsAlphaBits=%u -g%s -r%s %s -sOutputFile=%s -- "%s" -c quit' />
-  <delegate decode="gs-mono" restrain="True" command='@PSDelegate@ -q -dBATCH -dMaxBitmap=300000000 -dNOPAUSE -sDEVICE=pbmraw -dTextAlphaBits=%u -dGraphicsAlphaBits=%u -g%s -r%s %s -sOutputFile=%s -- "%s" -c quit' />
+  <delegate decode="gs-color" restrain="True" command='"@PSDelegate@" -q -dBATCH -dMaxBitmap=300000000 -dNOPAUSE -sDEVICE=pnmraw -dTextAlphaBits=%u -dGraphicsAlphaBits=%u -g%s -r%s %s -sOutputFile=%s -- "%s" -c quit' />
+  <delegate decode="gs-mono" restrain="True" command='"@PSDelegate@" -q -dBATCH -dMaxBitmap=300000000 -dNOPAUSE -sDEVICE=pbmraw -dTextAlphaBits=%u -dGraphicsAlphaBits=%u -g%s -r%s %s -sOutputFile=%s -- "%s" -c quit' />
   <delegate decode="hpgl" command='@HPGLDecodeDelegate@ -q -m eps -f "%o" "%i"' />
   <delegate decode="htm" command='html2ps -U -o "%o" "%i"' />
   <delegate decode="html" command='html2ps -U -o "%o" "%i"' />
   <delegate decode="ilbm" command='ilbmtoppm "%i" > "%o"' />
   <delegate decode="man" command='groff -man -Tps "%i" > "%o"' />
-  <delegate decode="mpeg" command='@MPEGDecodeDelegate@ -q -b "%i" -f -o3 "%u%%05d"; @GMDelegate@ convert -temporary "%u*.ppm" "miff:%o" ' />
-  <delegate encode="mpeg-encode" stealth="True" command='@MPEGEncodeDelegate@ "%i" "%o"' />
-  <delegate decode="pdf" encode="eps" mode="bi" command='@PSDelegate@ -q -dBATCH -dMaxBitmap=300000000 -dNOPAUSE -sDEVICE=epswrite -sOutputFile=%o -- "%i" -c quit' />
-  <delegate decode="pdf" encode="ps" mode="bi" command='@PSDelegate@ -q -dBATCH -dMaxBitmap=300000000 -dNOPAUSE -sDEVICE=pswrite -sOutputFile=%o -- "%i" -c quit' />
+  <delegate decode="mpeg" command='"@MPEGDecodeDelegate@" -q -b "%i" -f -o3 "%u%%05d"; "@GMDelegate@" convert -temporary "%u*.ppm" "miff:%o" ' />
+  <delegate encode="mpeg-encode" stealth="True" command='"@MPEGEncodeDelegate@" "%i" "%o"' />
+  <delegate decode="pdf" encode="eps" mode="bi" command='"@PSDelegate@" -q -dBATCH -dMaxBitmap=300000000 -dNOPAUSE -sDEVICE=epswrite -sOutputFile=%o -- "%i" -c quit' />
+  <delegate decode="pdf" encode="ps" mode="bi" command='"@PSDelegate@" -q -dBATCH -dMaxBitmap=300000000 -dNOPAUSE -sDEVICE=pswrite -sOutputFile=%o -- "%i" -c quit' />
   <delegate decode="pgp" command='pgpv -fq "%i"' />
   <delegate decode="pnm" encode="ilbm" mode="encode" command='ppmtoilbm -24if "%i" > "%o"' />
   <delegate decode="pov" command='povray "+i"%i"" +o"%o" +fn%q +w%w +h%h +a -q9 -kfi"%s" -kff"%n"
-    @GMDelegate@ convert -concatenate %o*.png "%o"' />
-  <delegate decode="ps" encode="eps" mode="bi" command='@PSDelegate@ -q -dBATCH -dMaxBitmap=300000000 -dNOPAUSE -sDEVICE=epswrite -sOutputFile=%o -- "%i" -c quit' />
-  <delegate decode="ps" encode="pdf" mode="bi" command='@PSDelegate@ -q -dBATCH -dMaxBitmap=300000000 -dNOPAUSE -sDEVICE=pdfwrite -sOutputFile=%o -- "%i" -c quit' />
+    "@GMDelegate@" convert -adjoin %o*.png "%o"' />
+  <delegate decode="ps" encode="eps" mode="bi" command='"@PSDelegate@" -q -dBATCH -dMaxBitmap=300000000 -dNOPAUSE -sDEVICE=epswrite -sOutputFile=%o -- "%i" -c quit' />
+  <delegate decode="ps" encode="pdf" mode="bi" command='"@PSDelegate@" -q -dBATCH -dMaxBitmap=300000000 -dNOPAUSE -sDEVICE=pdfwrite -sOutputFile=%o -- "%i" -c quit' />
   <delegate decode="pcl" encode="print" mode="encode" command='print "%i"' />
   <delegate decode="rad" command='ra_ppm -g 1.0 "%i" "%o"' />
-  <delegate decode="rgba" encode="rle" mode="encode" command='@GMDelegate@ mogrify -flip -size %wx%h "rgba:%i"
+  <delegate decode="rgba" encode="rle" mode="encode" command='"@GMDelegate@" mogrify -flip -size %wx%h "rgba:%i"
     rawtorle -w %w -h %h -n 4 -o "%o" "%i"' />
   <delegate decode="scan" command='scanimage -d "%i" > "%o"' />
   <delegate decode="shtml" command='html2ps -U -o "%o" "%i"' />
