@@ -47,47 +47,47 @@
 
  -->
 <delegatemap>
-  <delegate decode="autotrace" stealth="True" command='@AutotraceDecodeDelegate@ -output-format svg -output-file "%o" "%i"' />
-  <delegate decode="browse" stealth="True" spawn="True" command='@BrowseDelegate@ http://www.imagemagick.org/'  />
-  <delegate decode="cgm" command='@CGMDecodeDelegate@ -d ps < "%i" > "%o" 2>/dev/null' />
-  <delegate decode="dcraw" command='@DCRAWDecodeDelegate@ -c -w -2 "%i" > "%o"' />
-  <delegate decode="dot" command='@DOTDecodeDelegate@ -Tps "%i" -o "%o"' />
-  <delegate decode="dvi" command='@DVIDecodeDelegate@ -q -o "%o" "%i"' />
-  <delegate decode="edit" stealth="True" command='@EditorDelegate@ -title "Edit Image Comment" -e vi "%o"' />
-  <delegate decode="emf" command='@WMFDecodeDelegate@ -o "%o" "%i"' />
-  <delegate decode="eps" encode="pdf" mode="bi" command='@PSDelegate@ -q -dBATCH -dMaxBitmap=50000000 -dNOPAUSE -sDEVICE=@GSPDFDevice@ -sOutputFile=%o -- "%i" -c quit' />
-  <delegate decode="eps" encode="ps" mode="bi" command='@PSDelegate@ -q -dBATCH -dMaxBitmap=50000000 -dNOPAUSE -sDEVICE=@GSPSDevice@ -sOutputFile=%o -- "%i" -c quit' />
-  <delegate decode="fig" command='@FIGDecodeDelegate@ -L ps "%i" "%o"' />
-  <delegate decode="gplt" command='@EchoDelegate@ "set size 1.25,0.62
-    set terminal postscript portrait color solid; set output "%o"; load "%i"" > %u;@GnuplotDecodeDelegate@ %u' />
-  <delegate decode="gs-color" stealth="True" command='@PSDelegate@ -q -dBATCH -dMaxBitmap=50000000 -dNOPAUSE -sDEVICE=@GSColorDevice@ -dTextAlphaBits=%u -dGraphicsAlphaBits=%u -g%s -r%s %s -sOutputFile=%s -- "%s" -c quit' />
-  <delegate decode="gs-mono" stealth="True" command='@PSDelegate@ -q -dBATCH -dMaxBitmap=50000000 -dNOPAUSE -sDEVICE=@GSMonoDevice@ -dTextAlphaBits=%u -dGraphicsAlphaBits=%u -g%s -r%s %s -sOutputFile=%s -- "%s" -c quit' />
-  <delegate decode="hpg" command='@HPGLDecodeDelegate@ -q -m eps -f `basename "%o"` "%i"
+  <delegate decode="autotrace" stealth="True" command='"@AutotraceDecodeDelegate@" -output-format svg -output-file "%o" "%i"' />
+  <delegate decode="browse" stealth="True" spawn="True" command='"@BrowseDelegate@" "http://www.GraphicsMagick.org/"'  />
+  <delegate decode="cgm" command='"@CGMDecodeDelegate@" -d ps < "%i" > "%o" 2>/dev/null' />
+  <delegate decode="dcraw" command='"@DCRAWDecodeDelegate@" -c -w -2 "%i" > "%o"' />
+  <delegate decode="dot" command='"@DOTDecodeDelegate@" -Tps "%i" -o "%o"' />
+  <delegate decode="dvi" command='"@DVIDecodeDelegate@" -q -o "%o" "%i"' />
+  <delegate decode="edit" stealth="True" command='"@EditorDelegate@" -title "Edit Image Comment" -e vi "%o"' />
+  <delegate decode="emf" command='"@WMFDecodeDelegate@" -o "%o" "%i"' />
+  <delegate decode="eps" encode="pdf" mode="bi" command='"@PSDelegate@" -q -dBATCH -dMaxBitmap=50000000 -dNOPAUSE -sDEVICE=@GSPDFDevice@ -sOutputFile=%o -- "%i" -c quit' />
+  <delegate decode="eps" encode="ps" mode="bi" command='"@PSDelegate@" -q -dBATCH -dMaxBitmap=50000000 -dNOPAUSE -sDEVICE=@GSPSDevice@ -sOutputFile=%o -- "%i" -c quit' />
+  <delegate decode="fig" command='"@FIGDecodeDelegate@" -L ps "%i" "%o"' />
+  <delegate decode="gplt" command='"@EchoDelegate@" "set size 1.25,0.62
+    set terminal postscript portrait color solid; set output "%o"; load "%i"" > %u; "@GnuplotDecodeDelegate@" %u' />
+  <delegate decode="gs-color" stealth="True" command='"@PSDelegate@" -q -dBATCH -dMaxBitmap=50000000 -dNOPAUSE -sDEVICE=@GSColorDevice@ -dTextAlphaBits=%u -dGraphicsAlphaBits=%u -g%s -r%s %s -sOutputFile=%s -- "%s" -c quit' />
+  <delegate decode="gs-mono" stealth="True" command='"@PSDelegate@" -q -dBATCH -dMaxBitmap=50000000 -dNOPAUSE -sDEVICE=@GSMonoDevice@ -dTextAlphaBits=%u -dGraphicsAlphaBits=%u -g%s -r%s %s -sOutputFile=%s -- "%s" -c quit' />
+  <delegate decode="hpg" command='"@HPGLDecodeDelegate@" -q -m eps -f `basename "%o"` "%i"
     mv -f `basename "%o"` "%o"' />
-  <delegate decode="hpgl" command='@HPGLDecodeDelegate@ -q -m eps -f `basename "%o"` "%i"
+  <delegate decode="hpgl" command='"@HPGLDecodeDelegate@" -q -m eps -f `basename "%o"` "%i"
     mv -f `basename "%o"` "%o"' />
-  <delegate decode="htm" command='@HTMLDecodeDelegate@ -U -o "%o" "%i"' />
-  <delegate decode="html" command='@HTMLDecodeDelegate@ -U -o "%o" "%i"' />
-  <delegate decode="ilbm" command='@ILBMDecodeDelegate@ "%i" > "%o"' />
-  <delegate decode="man" command='@MANDelegate@ -man -Tps "%i" > "%o"' />
-  <delegate decode="mpeg" command='@MPEGDecodeDelegate@ -q -b "%i" -f -o3 "%u%%05d"; @GMDelegate@ convert -temporary "%u*.ppm" "miff:%o" ; rm -f %u*.ppm ' />
-  <delegate encode="mpeg-encode" stealth="True" command='@MPEGEncodeDelegate@ "%i" "%o"' />
-  <delegate decode="pdf" encode="eps" mode="bi" command='@PSDelegate@ -q -dBATCH -dMaxBitmap=50000000 -dNOPAUSE -sDEVICE=@GSEPSDevice@ -sOutputFile=%o -- "%i" -c quit' />
-  <delegate decode="pdf" encode="ps" mode="bi" command='@PSDelegate@ -q -dBATCH -dMaxBitmap=50000000 -dNOPAUSE -sDEVICE=@GSPSDevice@ -sOutputFile=%o -- "%i" -c quit' />
-  <delegate decode="pnm" encode="ilbm" mode="encode" command='@ILBMEncodeDelegate@ -24if "%i" > "%o"' />
-  <delegate decode="pnm" encode="launch" mode="encode" command='@LaunchDelegate@ "%i"' />
-  <delegate decode="pnm" encode="win" mode="encode" command='@GMDelegate@ display -immutable "%i"' />
+  <delegate decode="htm" command='"@HTMLDecodeDelegate@" -U -o "%o" "%i"' />
+  <delegate decode="html" command='"@HTMLDecodeDelegate@" -U -o "%o" "%i"' />
+  <delegate decode="ilbm" command='"@ILBMDecodeDelegate@" "%i" > "%o"' />
+  <delegate decode="man" command='"@MANDelegate@" -man -Tps "%i" > "%o"' />
+  <delegate decode="mpeg" command='"@MPEGDecodeDelegate@" -q -b "%i" -f -o3 "%u%%05d"; @GMDelegate@ convert -temporary "%u*.ppm" "miff:%o" ; rm -f %u*.ppm ' />
+  <delegate encode="mpeg-encode" stealth="True" command='"@MPEGEncodeDelegate@" "%i" "%o"' />
+  <delegate decode="pdf" encode="eps" mode="bi" command='"@PSDelegate@" -q -dBATCH -dMaxBitmap=50000000 -dNOPAUSE -sDEVICE=@GSEPSDevice@ -sOutputFile=%o -- "%i" -c quit' />
+  <delegate decode="pdf" encode="ps" mode="bi" command='"@PSDelegate@" -q -dBATCH -dMaxBitmap=50000000 -dNOPAUSE -sDEVICE=@GSPSDevice@ -sOutputFile=%o -- "%i" -c quit' />
+  <delegate decode="pnm" encode="ilbm" mode="encode" command='"@ILBMEncodeDelegate@" -24if "%i" > "%o"' />
+  <delegate decode="pnm" encode="launch" mode="encode" command='"@LaunchDelegate@" "%i"' />
+  <delegate decode="pnm" encode="win" mode="encode" command='"@GMDelegate@" display -immutable "%i"' />
   <delegate decode="pov" command='@POVDelegate@ "+i"%i"" +o"%o" +fn%q +w%w +h%h +a -q9 -kfi"%s" -kff"%n"
-    @GMDelegate@ convert -concatenate "%o*.png" "%o"' />
-  <delegate decode="ps" encode="eps" mode="bi" command='@PSDelegate@ -q -dBATCH -dMaxBitmap=50000000 -dNOPAUSE -sDEVICE=@GSEPSDevice@ -sOutputFile=%o -- "%i" -c quit' />
-  <delegate decode="ps" encode="pdf" mode="bi" command='@PSDelegate@ -q -dBATCH -dMaxBitmap=50000000 -dNOPAUSE -sDEVICE=@GSPDFDevice@ -sOutputFile=%o -- "%i" -c quit' />
-  <delegate decode="ps" encode="print" mode="encode" command='@PrintDelegate@ "%i"' />
-  <delegate decode="rad" command='@RADDecodeDelegate@ -g 1.0 "%i" "%o"' />
-  <delegate decode="rgba" encode="rle" mode="encode" command='@GMDelegate@ mogrify -flip -size %wx%h "rgba:%i"
-    @RLEEncodeDelegate@ -w %w -h %h -n 4 -o "%o" "%i"' />
-  <delegate decode="scan" command='@SCANDecodeDelegate@ -d "%i" > "%o"' />
-  <delegate decode="shtml" command='@HTMLDecodeDelegate@ -U -o "%o" "%i"' />
-  <delegate decode="txt" encode="ps" mode="bi" command='@TXTDelegate@ -o "%o" "%i"' />
-  <delegate decode="wmf" command='@WMFDecodeDelegate@ -o "%o" "%i"' />
-  <delegate encode="show" stealth="True" spawn="True" command='@GMDelegate@ display -immutable -delay 0 -window_group %g -title "%l of %f" "tmp:%o"' />
+    "@GMDelegate@" convert -adjoin "%o*.png" "%o"' />
+  <delegate decode="ps" encode="eps" mode="bi" command='"@PSDelegate@" -q -dBATCH -dMaxBitmap=50000000 -dNOPAUSE -sDEVICE=@GSEPSDevice@ -sOutputFile=%o -- "%i" -c quit' />
+  <delegate decode="ps" encode="pdf" mode="bi" command='"@PSDelegate@" -q -dBATCH -dMaxBitmap=50000000 -dNOPAUSE -sDEVICE=@GSPDFDevice@ -sOutputFile=%o -- "%i" -c quit' />
+  <delegate decode="ps" encode="print" mode="encode" command='"@PrintDelegate@" "%i"' />
+  <delegate decode="rad" command='"@RADDecodeDelegate@" -g 1.0 "%i" "%o"' />
+  <delegate decode="rgba" encode="rle" mode="encode" command='"@GMDelegate@" mogrify -flip -size %wx%h "rgba:%i"
+    "@RLEEncodeDelegate@" -w %w -h %h -n 4 -o "%o" "%i"' />
+  <delegate decode="scan" command='"@SCANDecodeDelegate@" -d "%i" > "%o"' />
+  <delegate decode="shtml" command='"@HTMLDecodeDelegate@" -U -o "%o" "%i"' />
+  <delegate decode="txt" encode="ps" mode="bi" command='"@TXTDelegate@" -o "%o" "%i"' />
+  <delegate decode="wmf" command='"@WMFDecodeDelegate@" -o "%o" "%i"' />
+  <delegate encode="show" stealth="True" spawn="True" command='"@GMDelegate@" display -immutable -delay 0 -window_group %g -title "%l of %f" "tmp:%o"' />
 </delegatemap>
